fixing overflow text in location. so i implementing nested row in there

--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -1,43 +1,50 @@
-.footer{
-margin-top: 88px;
-background: var( --color-primary);
-color: var(--color-white);
+.footer {
+  background: var(--color-primary);
+  color: var(--color-white);
+  padding: 24px 48px 16px;
+}
+@media screen and (max-width: 576px) {
+  .footer {
+    padding-inline: 16px;
+  }
 }
 
-.logo{
-    width: 100%;
-    height: auto;
+.copyright span {
+  text-align: center;
 }
 
-.copyright span{
-    text-align: center; 
+.copyright {
+  display: flex;
+  flex-basis: 100%;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid var(--color-white);
+  background: var(--color-primary);
+  padding-block: var(--space-l);
+  color: var(--color-white);
 }
 
-.copyright{
-    display:flex;
-    flex-basis: 100%;
-    justify-content: center;
-    align-items:center;
-    border-top: 1px solid var(--color-white);
+.link {
+  color: var(--color-white);
+}
+.link:hover {
+  color: var(--color-primary-light);
 }
 
-.span{
-    padding-top: 24px;
-    padding-bottom:16px;
+h4 {
+  font-size: var(--font-h4-size);
+  font-weight: var(--font-h4-weight-sb);
+  color: var(--color-white);
 }
 
-.link{
-    color: var(--color-white)
+h5 {
+  color: var(--color-white);
 }
 
-h5{
-    font-size:var(--font-body-1-size);
-    font-weight: var(--font-body-1-weight) ;
-    color: var(--color-white)
-}
-
-h4{
-    font-size:var(--font-h4-size);
-    font-weight: var(--font-body-1-weight) ;
-    color: var(--color-white)
+.body1 {
+  font-size: var(--font-body-1-size);
+  font-weight: var(--font-body-1-weight-m);
+  line-height: var(--font-body-1-lh);
+  letter-spacing: var(--font-body-1-ls);
+  color: var(--color-white);
 }
